style: fix news article h3 wrong font family

--- a/src/components/NewsArticle/NewsArticle.css
+++ b/src/components/NewsArticle/NewsArticle.css
@@ -22,8 +22,8 @@
       height: 60%;
 
       & h3 {
-        font-family: 'Newsreader', serif;
-        font-size: 1.5rem;
+        font-family: 'IBM Plex Serif', serif;
+        font-size: 1.3rem;
         margin: 18.72px 0;
       }
     }
